links are functionnal

--- a/index.html
+++ b/index.html
@@ -55,8 +55,7 @@
           <div class="nav">
             <div class="row">
               <div class="col-12 col-md-3">
-                <div class="country">
-                  <!-- first commit -->
+                <a class="country" href="#france">
                   <img
                     src="img/france/french-nav.jpg"
                     alt="picture of a dish from France"
@@ -68,10 +67,10 @@
                     </div>
                   </div>
                   <div class="country-title">France</div>
-                </div>
+                </a>
               </div>
               <div class="col-12 col-md-3">
-                <div class="country">
+                <a class="country" href="#japan">
                   <div class="country-title">Japon</div>
                   <img
                     src="img/japon/japanese-nav.jpeg"
@@ -83,10 +82,10 @@
                       <div class="line"></div>
                     </div>
                   </div>
-                </div>
+                </a>
               </div>
               <div class="col-12 col-md-3">
-                <div class="country">
+                <a class="country" href="#ethiopian">
                   <img
                     src="img/éthiopie/ethiopian-nav.jpeg"
                     alt="picture of a dish from Ethiopia"
@@ -98,10 +97,10 @@
                     </div>
                   </div>
                   <div class="country-title">Ethiopie</div>
-                </div>
+                </a>
               </div>
               <div class="col-12 col-md-3">
-                <div class="country">
+                <a class="country" href="#greek">
                   <div class="country-title">Grèce</div>
                   <img
                     src="img/grèce/greek-nav.jpg"
@@ -113,10 +112,10 @@
                       <div class="line"></div>
                     </div>
                   </div>
-                </div>
+                </a>
               </div>
               <div class="col-12 col-md-3">
-                <div class="country">
+                <a class="country" href="#mexican">
                   <img
                     src="img/mexique/mexican-nav.jpg"
                     alt="picture of a dish from Mexico"
@@ -128,10 +127,10 @@
                     </div>
                   </div>
                   <div class="country-title">Mexique</div>
-                </div>
+                </a>
               </div>
               <div class="col-12 col-md-3">
-                <div class="country">
+                <a class="country" href="#libanese">
                   <div class="country-title">Liban</div>
                   <img
                     src="img/liban/libanese-nav.jpg"
@@ -143,10 +142,10 @@
                       <div class="line"></div>
                     </div>
                   </div>
-                </div>
+                </a>
               </div>
               <div class="col-12 col-md-3">
-                <div class="country">
+                <a class="country" href="#moroccan">
                   <img
                     src="img/maroc/moroccan-nav.jpg"
                     alt="picture of a dish from Morocco"
@@ -158,10 +157,10 @@
                     </div>
                   </div>
                   <div class="country-title">Maroc</div>
-                </div>
+                </a>
               </div>
               <div class="col-12 col-md-3">
-                <div class="country">
+                <a class="country" href="#india">
                   <div class="country-title">Inde</div>
                   <img
                     src="img/inde/indian-nav.jpg"
@@ -173,7 +172,7 @@
                       <div class="line"></div>
                     </div>
                   </div>
-                </div>
+                </a>
               </div>
             </div>
           </div>
@@ -190,7 +189,7 @@
         </div>
       </div>
       <section>
-        <div class="pattern pattern-france"></div>
+        <div id="france" class="pattern pattern-france"></div>
         <div class="container">
           <div class="content">
             <div class="row">
@@ -233,7 +232,7 @@
         </div>
       </section>
       <section>
-        <div class="pattern pattern-japan"></div>
+        <div id="japan" class="pattern pattern-japan"></div>
         <div class="container">
           <div class="content">
             <div class="row">
@@ -276,7 +275,7 @@
         </div>
       </section>
       <section>
-        <div class="pattern pattern-ethiopian"></div>
+        <div id="ethiopian" class="pattern pattern-ethiopian"></div>
         <div class="container">
           <div class="content">
             <div class="row">
@@ -319,7 +318,7 @@
         </div>
       </section>
       <section>
-        <div class="pattern pattern-greek"></div>
+        <div id="greek" class="pattern pattern-greek"></div>
         <div class="container">
           <div class="content">
             <div class="row">
@@ -362,7 +361,7 @@
         </div>
       </section>
       <section>
-        <div class="pattern pattern-mexican"></div>
+        <div id="mexican" class="pattern pattern-mexican"></div>
         <div class="container">
           <div class="content">
             <div class="row">
@@ -405,7 +404,7 @@
         </div>
       </section>
       <section>
-        <div class="pattern pattern-libanese"></div>
+        <div id="libanese" class="pattern pattern-libanese"></div>
         <div class="container">
           <div class="content">
             <div class="row">
@@ -448,7 +447,7 @@
         </div>
       </section>
       <section>
-        <div class="pattern pattern-maroccan"></div>
+        <div id="moroccan" class="pattern pattern-maroccan"></div>
         <div class="container">
           <div class="content">
             <div class="row">
@@ -491,7 +490,7 @@
         </div>
       </section>
       <section>
-        <div class="pattern pattern-indian"></div>
+        <div id="india" class="pattern pattern-indian"></div>
         <div class="container">
           <div class="content">
             <div class="row">
