change name of background-blur

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
           />
         </svg>
       </div>
-      <div class="background-blur-menu">
+      <div class="background-blur-burger">
         <div class="background-menu">
           <div class="menu">
             <ul>
@@ -238,6 +238,34 @@
                 <div class="center">
                   <div class="button-menu">Voir le menu</div>
                 </div>
+                <div class="menu-mobile">
+                  <h3>Entrées</h3>
+                  <ul>
+                    <li>Pâté de campagne</li>
+                    <li>Flammekueche</li>
+                    <li>Salade César</li>
+                    <li>Soupe à l’oignon</li>
+                  </ul>
+                  <h3>Plats principaux</h3>
+                  <ul>
+                    <li>Tartelettes d’oignons</li>
+                    <li>Asperges et poireaux baguettes sauce gribiche</li>
+                    <li>Moules au cidre et aux lardons</li>
+                    <li>Harengs pommes à l'huile</li>
+                    <li>Steaks au poivre</li>
+                    <li>Pavé de cabillaud à l'aïoli</li>
+                    <li>Coq au vin et aux champignons de Paris</li>
+                    <li>Gratin dauphinois aux cèpes</li>
+                  </ul>
+                  <h3>Desserts</h3>
+                  <ul>
+                    <li>Crêpes bretonnes</li>
+                    <li>Eclairs au chocolat</li>
+                    <li>Tarte aux pommes</li>
+                    <li>Crème brûlée</li>
+                  </ul>
+                </div>
+                <div class="menu-desktop"></div>
               </div>
               <div class="col-12 col-md-6">
                 <img src="img/france/french-food-2.jpeg" alt="" />
