--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
                 </div>
               </div>
               <div class="col-12 col-md-6 order-md-1">
-                <div class="center">
+                <div class="center no-height">
                   <div class="button-menu">Voir le menu</div>
                 </div>
                 <div class="menu-mobile">
