--- a/index.html
+++ b/index.html
@@ -231,12 +231,55 @@
               </div>
               <div class="col-12">
                 <div class="carousel">
-                  <img src="img/france/french-food-1.jpeg" alt="" />
+                  <img
+                    src="/img/france/french-food-1.jpeg "
+                    alt=""
+                    class="slide"
+                  />
+                  <img
+                    src="/img/france/french-food-2.jpeg"
+                    alt=""
+                    class="slide"
+                  />
+                  <img
+                    src="/img/france/french-food-3.jpeg"
+                    alt=""
+                    class="slide"
+                  />
+                  <img
+                    src="/img/france/french-food-4.jpeg"
+                    alt=""
+                    class="slide"
+                  />
                 </div>
               </div>
               <div class="col-12 col-md-6 order-md-1">
                 <div class="center no-height">
-                  <div class="button-menu">Voir le menu</div>
+                  <div class="button-menu">
+                    Voir le menu
+                    <svg
+                      xmlns="http://www.w3.org/2000/svg"
+                      width="14"
+                      height="11"
+                      viewBox="0 0 14 11"
+                      fill="none"
+                    >
+                      <line
+                        x1="1.32747"
+                        y1="0.622155"
+                        x2="12.8659"
+                        y2="10.6222"
+                        stroke="var(--gray)"
+                      />
+                      <line
+                        x1="0.672535"
+                        y1="10.6222"
+                        x2="12.211"
+                        y2="0.622156"
+                        stroke="var(--gray)"
+                      />
+                    </svg>
+                  </div>
                 </div>
                 <div class="menu-mobile">
                   <h3>Entrées</h3>
