--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
               <div class="col-12 col-md-3">
                 <a class="country" href="#ethiopian">
                   <img
-                    src="img/éthiopie/ethiopian-nav.jpeg"
+                    src="img/eethiopie/ethiopian-nav.jpeg"
                     alt="picture of a dish from Ethiopia"
                   />
                   <div class="country-overlay">
@@ -123,7 +123,7 @@
                 <a class="country" href="#greek">
                   <div class="country-title">Grèce</div>
                   <img
-                    src="img/grèce/greek-nav.jpg"
+                    src="img/grece/greek-nav.jpg"
                     alt="picture of a dish from Greece"
                   />
                   <div class="country-overlay">
@@ -232,22 +232,22 @@
               <div class="col-12">
                 <div class="carousel">
                   <img
-                    src="/img/france/french-food-1.jpeg "
+                    src="img/france/french-food-1.jpeg "
                     alt=""
                     class="slide"
                   />
                   <img
-                    src="/img/france/french-food-2.jpeg"
+                    src="img/france/french-food-2.jpeg"
                     alt=""
                     class="slide"
                   />
                   <img
-                    src="/img/france/french-food-3.jpeg"
+                    src="img/france/french-food-3.jpeg"
                     alt=""
                     class="slide"
                   />
                   <img
-                    src="/img/france/french-food-4.jpeg"
+                    src="img/france/french-food-4.jpeg"
                     alt=""
                     class="slide"
                   />
@@ -380,15 +380,15 @@
                     l'Afrique de l'Est. Découvrez des plats authentiques qui
                     reflètent la diversité de la région.
                   </p>
-                  <img src="img/éthiopie/ethiopian-food-3.jpeg" alt="" />
+                  <img src="img/ethiopie/ethiopian-food-3.jpeg" alt="" />
                 </div>
               </div>
               <div class="col-12 col-md-6">
-                <img src="img/éthiopie/ethiopian-food-2.jpeg" alt="" />
+                <img src="img/ethiopie/ethiopian-food-2.jpeg" alt="" />
               </div>
               <div class="col-12">
                 <div class="carousel">
-                  <img src="img/éthiopie/ethiopian-food-1.jpeg" alt="" />
+                  <img src="img/ethiopie/ethiopian-food-1.jpeg" alt="" />
                 </div>
               </div>
               <div class="col-12 col-md-6 order-md-1">
@@ -397,11 +397,11 @@
                 </div>
               </div>
               <div class="col-12 col-md-6">
-                <img src="img/éthiopie/ethiopian-food-1.jpeg" alt="" />
+                <img src="img/ethiopie/ethiopian-food-1.jpeg" alt="" />
               </div>
               <div class="col-12 col-md-6 order-md-2">
                 <div class="img-height">
-                  <img src="img/éthiopie/ethiopian-food-4.jpeg" alt="" />
+                  <img src="img/ethiopie/ethiopian-food-4.jpeg" alt="" />
                 </div>
               </div>
             </div>
@@ -423,15 +423,15 @@
                     méditerranéennes. Découvrez des plats authentiques qui
                     capturent l'esprit et la tradition de la Grèce.
                   </p>
-                  <img src="img/grèce/greek-food-2.jpeg" alt="" />
+                  <img src="img/grece/greek-food-2.jpeg" alt="" />
                 </div>
               </div>
               <div class="col-12 col-md-6">
-                <img src="img/grèce/greek-food-1.jpeg" alt="" />
+                <img src="img/grece/greek-food-1.jpeg" alt="" />
               </div>
               <div class="col-12">
                 <div class="carousel">
-                  <img src="img/grèce/greek-food-1.jpeg" alt="" />
+                  <img src="img/grece/greek-food-1.jpeg" alt="" />
                 </div>
               </div>
               <div class="col-12 col-md-6 order-md-1">
@@ -440,11 +440,11 @@
                 </div>
               </div>
               <div class="col-12 col-md-6">
-                <img src="img/grèce/greek-food-3.jpeg" alt="" />
+                <img src="img/grece/greek-food-3.jpeg" alt="" />
               </div>
               <div class="col-12 col-md-6 order-md-2">
                 <div class="img-height">
-                  <img src="img/grèce/greek-food-4.jpeg" alt="" />
+                  <img src="img/grece/greek-food-4.jpeg" alt="" />
                 </div>
               </div>
             </div>
